--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,6 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+<?xml version="1.0" encoding="utf-8"?>
+<vector android:height="108.0dip" android:width="108.0dip" android:viewportWidth="108.0" android:viewportHeight="108.0"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#ff111111" android:pathData="M54,75.656C62.588,75.656 69.962,70.254 73.149,62.539C76.919,61.872 79.781,58.579 79.781,54.619C79.781,50.837 77.171,47.664 73.654,46.805C70.801,38.381 63.078,32.344 54,32.344C44.922,32.344 37.199,38.381 34.346,46.805C30.829,47.664 28.219,50.837 28.219,54.619C28.219,58.579 31.081,61.872 34.851,62.539C38.038,70.254 45.412,75.656 54,75.656ZM68.438,50.906C68.438,53.387 67.315,55.605 65.55,57.08V59.466V59.569H65.549C65.486,65.046 60.386,69.469 54.103,69.469C47.821,69.469 42.72,65.046 42.657,59.569H42.656V59.466V57.247C40.773,55.775 39.563,53.482 39.563,50.906C39.563,46.464 43.164,42.862 47.606,42.862C50.213,42.862 52.53,44.103 54,46.025C55.47,44.103 57.787,42.862 60.394,42.862C64.836,42.862 68.438,46.464 68.438,50.906Z" android:fillType="evenOdd" />
+    <path android:fillColor="#ff111111" android:pathData="M50.081,51.319C50.081,52.572 49.204,53.588 48.122,53.588C47.04,53.588 46.163,52.572 46.163,51.319C46.163,50.066 47.04,49.05 48.122,49.05C49.204,49.05 50.081,50.066 50.081,51.319ZM60.806,59.156H47.4V59.754C47.4,62.763 50.428,65.138 54.103,65.138C57.778,65.138 60.806,62.763 60.806,59.754V59.156ZM60.084,53.588C61.167,53.588 62.044,52.572 62.044,51.319C62.044,50.066 61.167,49.05 60.084,49.05C59.002,49.05 58.125,50.066 58.125,51.319C58.125,52.572 59.002,53.588 60.084,53.588Z" android:fillType="evenOdd" />
 </vector>
