--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.KmongClone" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+    <!-- Main application theme -->
+    <style name="Theme.KmongClone" parent="@style/presentation_Theme.KmongClone">
+        <!-- Customize app-specific theme attributes here -->
+    </style>
+
+    <!-- App-specific splash theme -->
+    <style name="Theme.KmongClone.Splash" parent="@style/presentation_Theme.KmongClone.SplashTheme">
+        <!-- Customize app-specific splash theme attributes here if needed -->
     </style>
 </resources>
