--- a/presentation/src/main/res/layout/activity_splash.xml
+++ b/presentation/src/main/res/layout/activity_splash.xml
@@ -28,21 +28,24 @@
                 android:text="@string/app_access_guide"
                 android:textSize="18sp"
                 android:layout_gravity="center_horizontal"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="@android:color/black"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:background="@drawable/bg_gray_rounded"
+                android:background="@drawable/bg_light_navi_rounded"
                 android:padding="12dp"
                 android:text="@string/necessary_access_rights"
-                android:textColor="@color/gray" />
+                android:textColor="@android:color/black" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/bg_light_navi_rounded"
                 android:layout_marginTop="16dp"
+                android:padding="12dp"
                 android:orientation="vertical">
 
                 <TextView
@@ -106,6 +109,7 @@
                 app:backgroundTint="@null"
                 android:background="@drawable/bg_yellow_button"
                 android:text="@string/confirm"
+                android:textSize="12sp"
                 android:textColor="@android:color/black"
                 style="@style/Widget.MaterialComponents.Button.UnelevatedButton" />
 
