--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <resources>
     <color name="kmong_primary">#FFFFD400</color>
-    <color name="gray">#757575</color>
+    <color name="kmong_light_navi">#F2F3F7</color>
     <!-- Add other colors as needed -->
 </resources>
